# Numerical-dashboard

./: CMakeLists.txt  DataUpdater.cpp  DataUpdater.h  Main.qml  README.md  main.cpp
